--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
   </header>
   
   <section>
-    <h1>My Page</h1>
+    <h1>Andrew's Page</h1>
   
     <article>
       <header>
-        <h2>First thing</h2>
+        <h2>Job</h2>
       </header>
-      <p>First thing description.</p>
+      <p>Bartender for McGuffins</p>
     </article>
     
     <article>
       <header>
-        <h2>Second thing</h2>
+        <h2>Picture of Andrew</h2>
       </header>
-      <p>Second thing description.</p>
+      <p>A picture of Andrew looking uncomfortable, like many pictures that include him.</p>
     </article> 
   </section>
 
